force-app/main/default/objects/PayReqBank__c/PayReqBank__c.object-meta.xml
<CustomObject>
    <label>TRX Plan+Bank</label>
    <nameField>
        <displayFormat>PRBT-{000000}</displayFormat>
        <label>TRX PLAN+BANK ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TRX Plan+Bank</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>