force-app/main/default/objects/PayReqBank__c/fields/AmountPaidFCYFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidFCYFormula__c</fullName>
    <formula>BankID__r.AmountPaidUSD__c</formula>
    <label>Amount Paid(FCY)-Formula</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>