force-app/main/default/objects/PayReqBank__c/fields/AmountPaidLocalforTrxPlan__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidLocalforTrxPlan__c</fullName>
    <label>Amount Paid(Local) for Trx Plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>