force-app/main/default/objects/PayReqBank__c/fields/AmountReceivedFCYFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedFCYFormula__c</fullName>
    <formula>BankID__r.AmountReceivedUSD__c</formula>
    <label>Amount Received(FCY)-Formula</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>