force-app/main/default/objects/PayReqBank__c/fields/AmountReceivedLocalforTrxPlan__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedLocalforTrxPlan__c</fullName>
    <label>Amount Received(Local) for Trx Plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>