force-app/main/default/objects/PayReqBank__c/fields/TrxPlanProcessingStatus__c.field-meta.xml
<CustomField>
    <fullName>TrxPlanProcessingStatus__c</fullName>
    <label>Trx Plan Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ReceivablePayableProcessingStatus</valueSetName>
    </valueSet>
</CustomField>